More UI updates

--- a/WebContent/styles.css
+++ b/WebContent/styles.css
@@ -15,12 +15,33 @@ body {
 	border-radius: 8px;
 	box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
-.button-container{
-		text-align: center;
+
+.button-container {
+	text-align: center;
+	margin-bottom: 20px;
 }
+
 .button-container form {
 	display: inline-block;
-	margin-right: 10px; /* Adjust spacing between buttons */
+	margin-right: 10px;
+	margin-bottom: 10px;
+}
+
+.button-container form input[type="submit"] {
+	font-size: 15px;
+	height: 30px;
+	width: 200px;
+	background-color: #4CAF50;
+	color: white;
+	border: none;
+	border-radius: 4px;
+	cursor: pointer;
+}
+
+.button-container form input[type="submit"]:hover {
+	background-color: #45a049;
+	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1), 0 3px 10px 0
+		rgba(0, 0, 0, 0.1);
 }
 
 .logo {
@@ -52,16 +73,20 @@ input[type="text"], input[type="password"] {
 }
 
 input[type="submit"] {
-	background-color: #007bff;
-	color: #fff;
-	border: none;
-	padding: 12px 20px;
-	border-radius: 5px;
+	height: 35px;
+	width: 120px;
+	font-size: 16px;
+	background-color: #4CAF50;
+	color: white;
 	cursor: pointer;
-	transition: background-color 0.3s ease;
-	margin-bottom: 15px;
+	border: none;
+	border-radius: 4px;
 }
 
 input[type="submit"]:hover {
-	background-color: #0056b3;
+	background-color: #45a049;
+	box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24), 0 17px 50px 0
+		rgba(0, 0, 0, 0.19);
+	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1), 0 3px 10px 0
+		rgba(0, 0, 0, 0.1);
 }
