--- a/WebContent/styles.css
+++ b/WebContent/styles.css
@@ -8,7 +8,7 @@ body {
 }
 
 .container {
-	max-width: 400px;
+	max-width: 800px;
 	margin: 50px auto;
 	padding: 20px;
 	background-color: #fff;
@@ -31,6 +31,7 @@ body {
 	font-size: 15px;
 	height: 30px;
 	width: 200px;
+	margin: 5px;
 	background-color: #4CAF50;
 	color: white;
 	border: none;
@@ -65,6 +66,7 @@ form {
 
 input[type="text"], input[type="password"] {
 	width: 100%;
+	margin: 5px;
 	padding: 10px;
 	margin-bottom: 15px;
 	border: 1px solid #ccc;
@@ -75,6 +77,7 @@ input[type="text"], input[type="password"] {
 input[type="submit"] {
 	height: 35px;
 	width: 120px;
+	margin: 5px;
 	font-size: 16px;
 	background-color: #4CAF50;
 	color: white;
@@ -85,8 +88,6 @@ input[type="submit"] {
 
 input[type="submit"]:hover {
 	background-color: #45a049;
-	box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24), 0 17px 50px 0
-		rgba(0, 0, 0, 0.19);
 	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1), 0 3px 10px 0
 		rgba(0, 0, 0, 0.1);
 }
